Fix card spacing

--- a/_scss/components/_post-card.scss
+++ b/_scss/components/_post-card.scss
@@ -89,11 +89,16 @@
   .posts {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: start;
   }
 
   .post-card {
     flex: 0 1 calc(33% - 1rem);
+    margin-bottom: 1.5rem;
+
+    &:nth-child(3n-2) { margin-right: 1rem; }
+    &:nth-child(3n-1) { margin-left: .5rem; margin-right: .5rem; }
+    &:nth-child(3n) { margin-left: 1rem; }
   }
 
 .post-card-img {
